# FERPAGradingSystem

./: .coverage  .gitignore  Dockerfile  README.md  cloudbuild.yaml  completeness_rubric.yaml  models.py  pipeline.py  pyproject.toml  settings.yaml  stage_0_ingestion_improved.py  stage_1_grammar.py  stage_3_anonymize.py
config/: custom_words.txt
sample_data/: Adam Love Full roster.xls  Adam_Love_Interim_1 Comments 25-26.docx  Adam_Love_Interim_1 Comments 25-26_grammar_report.txt  ~$am_Love_Interim_1 Comments 25-26.docx
sample_data/outputs/: Adam_Love_Interim_1 Comments 25-26_anonymized.txt
specs/: .current-spec
specs/ferpa-pipeline/: .progress.md  .ralph-state.json  design.md  requirements.md  research.md  tasks.md
specs/google-drive-integration/: .progress.md  .ralph-state.json  design.md  requirements.md  research.md  tasks.md
src/ferpa_feedback/: __init__.py  cli.py  models.py  pipeline.py  stage_0_ingestion.py  stage_1_grammar.py  stage_2_names.py  stage_3_anonymize.py  stage_4_semantic.py  stage_5_review.py
src/ferpa_feedback/gdrive/: __init__.py  auth.py  cloud_handler.py  config.py  discovery.py  downloader.py  errors.py  processor.py  rate_limiter.py  uploader.py
src/ferpa_feedback/recognizers/: __init__.py  educational.py
tests/: __init__.py  conftest.py  test_gdrive_discovery.py  test_gdrive_downloader.py  test_gdrive_processor.py  test_gdrive_uploader.py  test_integration.py  test_stage_0_ingestion.py  test_stage_2.py  test_stage_3.py  test_stage_4.py
tests/fixtures/: pii_test_corpus.json  sample_comments.json  test_roster.csv
