[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ferpa-feedback"
version = "0.1.0"
description = "FERPA-compliant teacher comment feedback system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Educational Technology Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Document Processing
    "python-docx>=1.1.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    
    # Grammar/Spelling (Local)
    "language-tool-python>=2.8",
    
    # Name Detection (Local ML)
    "gliner>=0.2.0",
    "spacy>=3.7.0",
    "rapidfuzz>=3.5.0",
    
    # PII Detection/Anonymization (Local)
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    
    # API Client (for Stage 4 only)
    "anthropic>=0.18.0",
    
    # Data Handling
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "pandas>=2.1.0",
    
    # Utilities
    "rich>=13.7.0",
    "typer>=0.9.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "pre-commit>=3.6.0",
]
review-ui = [
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "jinja2>=3.1.0",
]

[project.scripts]
ferpa-feedback = "ferpa_feedback.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]  # B008 ignored for typer CLI pattern

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
